legendary to mythic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">D4 Item Generator</string>
+    <string name="app_name">Diablo 4 Item Generator</string>
     <string name="diablo_4_item_generator">Diablo 4 Item Generator</string>
 </resources>
